# han

./: .gitignore  Cargo.toml  Dockerfile  README.md  llms-full.txt  llms.txt
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  test.yml
.sisyphus/: boulder.json
.sisyphus/notepads/korean-lang/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: han-language-upgrade.md
assets/: animated_demo.html  banner_aha.html  banner_code.html  banner_final.html  banner_options.html  banner_preview.html  demo.html  demo.tape  typing_demo.html
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: complete.md  keywords.md
docs/src/builtins/: conversion.md  datetime.md  file-io.md  format.md  http.md  io.md  json.md  math.md  regex.md  (+1 more)
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
examples/: HTTP_API.hgl  JSON처리.hgl  가위바위보.hgl  계산기.hgl  교육_01_변수조건.hgl  교육_02_반복문.hgl  교육_03_함수.hgl  교육_04_배열.hgl  교육_05_구조체.hgl  교육_06_클로저.hgl  교육_07_패턴매칭.hgl  교육_08_모듈.hgl  교육_09_에러처리.hgl  교육_10_종합.hgl  구구단.hgl  구조체메서드.hgl  단어세기.hgl  문자열보간.hgl  배열연산.hgl  범위반복.hgl  별찍기.hgl  소수판별.hgl  시스템정보.hgl  어텐션.hgl  에러처리.hgl  온도변환.hgl  정규식.hgl  정렬알고리즘.hgl  클로저고차.hgl  파일처리.hgl  패턴매칭.hgl  피보나치_SOV.hgl  한글연산자.hgl  할일목록.hgl
skills/han-language/: SKILL.md
src/: ast.rs  codegen.rs  interpreter.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  python_interop.rs  typechecker.rs
src/builtins/: io.rs  math.rs  mod.rs  string.rs  system.rs
tests/: integration.rs
web/: han.js  han_bg.wasm  index.html
(+28 files in other folders)
