[package]
name = "han"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hgl"
path = "src/main.rs"

[lib]
name = "han"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["native"]
native = ["reqwest"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["wasmbind"] }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
